Fixed the file submit button
It was too small to click

--- a/src/components/NewNote/NewNote.css
+++ b/src/components/NewNote/NewNote.css
@@ -55,8 +55,8 @@
 .file
 {
     opacity: 0;
-    width: 0.1px;
-    height: 0.1px;
+    width: 100px;
+    height: 50px;
     position: absolute;
 }
 
@@ -65,7 +65,7 @@
     display: block;
     position: relative;
     width: 100px;
-    height: 50px;
+    height: 50x;
     border-radius: 25px;
     background: linear-gradient(40deg, #ff6ec4, #7873f5);
     box-shadow: 0 4px 7px rgba(0, 0, 0, 0.4);
